--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>haleys' cafe</title>
 </head>
 <body>
 
@@ -20,7 +20,7 @@
 
             <div id="content">
                 <div id="home-title">
-                    welcome to cowpatch restaurant
+                    welcome to haley's cafe
                 </div>
                 <br>
                 <div id="home-body">
