move background picture from js to css.

--- a/src/template.html
+++ b/src/template.html
@@ -19,11 +19,11 @@
             </header>
 
             <div id="content">
-                <div id="home-title">
+                <div id="content-title">
                     welcome to haley's cafe
                 </div>
                 <br>
-                <div id="home-body">
+                <div id="content-body">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id ducimus, quasi assumenda quas aliquam quis praesentium iure doloribus, maxime repellat voluptate tenetur dolore at repellendus laboriosam, quibusdam quae. Perspiciatis, necessitatibus.
                 </div>
             </div>
