make home page appear via js instead of html.

--- a/src/template.html
+++ b/src/template.html
@@ -12,21 +12,13 @@
         <div class="main-container">  
             <header>
                 <nav>
-                    <button>Home</button>
-                    <button>Menu</button>
-                    <button>About</button>
+                    <button id="home-btn">Home</button>
+                    <button id="menu-btn">Menu</button>
+                    <button id="about-btn">About</button>
                 </nav>
             </header>
 
-            <div id="content">
-                <div id="content-title">
-                    welcome to haley's cafe
-                </div>
-                <br>
-                <div id="content-body">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id ducimus, quasi assumenda quas aliquam quis praesentium iure doloribus, maxime repellat voluptate tenetur dolore at repellendus laboriosam, quibusdam quae. Perspiciatis, necessitatibus.
-                </div>
-            </div>
+            <div id="content"></div>
         </div>
     </div>
 
