--- a/src/template.html
+++ b/src/template.html
@@ -12,9 +12,9 @@
         <div class="main-container">  
             <header>
                 <nav>
-                    <button id="home-btn">Home</button>
-                    <button id="menu-btn">Menu</button>
-                    <button id="about-btn">About</button>
+                    <button id="home-btn">home</button>
+                    <button id="menu-btn">menu</button>
+                    <button id="about-btn">about</button>
                 </nav>
             </header>
 
